--- a/fantasy_football_app/templates/fantasy_football_app/index.html
+++ b/fantasy_football_app/templates/fantasy_football_app/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Home - Fantasy Football Playoff Challenge</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'django_styles.css' %}">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'django_styles.css' %}"
+    />
     {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
@@ -60,8 +64,8 @@
               in the playoffs.
             </p>
             <div class="cta-buttons">
-              <a href="{% url 'register' %}">Register</a>
-              <a href="{% url 'sign_in' %}">Sign In</a>
+              <a href="{% url 'signup' %}">Register</a>
+              <a href="{% url 'login' %}">Sign In</a>
             </div>
           </div>
         </div>
