--- a/fantasy_football_app/templates/fantasy_football_app/login.html
+++ b/fantasy_football_app/templates/fantasy_football_app/login.html
@@ -1,4 +1,4 @@
-<!-- sign_in.html -->
+<!-- login.html -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -6,21 +6,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign In - Fantasy Football Playoff Challenge</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'django_styles.css' %}">
-    {% load bootstrap5 %} 
-    {% bootstrap_css %} 
-    {% bootstrap_javascript %}
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'django_styles.css' %}"
+    />
+    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
   </head>
   <body>
     <header>
       <h1>Sign In to the Fantasy Football Playoff Challenge</h1>
     </header>
     <main>
-      <section id="sign_in-form">
+      <section id="signin-form">
         <h2>Welcome Back!</h2>
-        <form action="{% url 'sign_in' %}" method="post">
-          {% csrf_token %} {{ form.username.label_tag }} {{ form.username }} 
-          {{ form.password.label_tag }} {{ form.password }}
+        <form action="{% url 'login' %}" method="post">
+          {% csrf_token %} {{ form.username.label_tag }} {{ form.username }} {{
+          form.password.label_tag }} {{ form.password }}
           <button type="submit">Sign In</button>
         </form>
       </section>
