--- a/fantasy_football_app/templates/fantasy_football_app/navbar.html
+++ b/fantasy_football_app/templates/fantasy_football_app/navbar.html
@@ -45,7 +45,7 @@
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'sign_out' %}">Logout</a>
+        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
       </li>
     </ul>
   </div>
