--- a/fantasy_football_app/templates/fantasy_football_app/signup.html
+++ b/fantasy_football_app/templates/fantasy_football_app/signup.html
@@ -1,4 +1,4 @@
-<!-- register.html -->
+<!-- signup.html -->
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -41,7 +41,7 @@
     <main>
       <section id="registration-form">
         <div class="container">
-          <form class="form-container" action="{% url 'register' %}" method="post">
+          <form class="form-container" action="{% url 'signup' %}" method="post">
             {% csrf_token %}
             {% if form.errors %}
             <ul class="errorlist">
@@ -78,6 +78,12 @@
             </div>
         </div>
 
+      </section>
+      <section>
+        <div class="cta-buttons">
+            <h4>Already have an account? </h4>
+            <a href="{% url 'login' %}">Sign In</a>
+          </div>
       </section>
     </main>
     <footer>
